force-app/main/default/objects/Time_Line_Conditions__c/Time_Line_Conditions__c.object-meta.xml
<CustomObject>
    <label>Time Line Conditions</label>
    <nameField>
        <label>Time Line Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Line Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>