force-app/main/default/objects/Time_Line_Conditions__c/fields/Condition_1__c.field-meta.xml
<CustomField>
    <fullName>Condition_1__c</fullName>
    <label>Condition 1</label>
    <type>TextArea</type>
</CustomField>