force-app/main/default/objects/Time_Line_Conditions__c/fields/Condition_2__c.field-meta.xml
<CustomField>
    <fullName>Condition_2__c</fullName>
    <label>Condition 2</label>
    <type>TextArea</type>
</CustomField>