force-app/main/default/objects/Time_Line_Conditions__c/fields/Condition_3__c.field-meta.xml
<CustomField>
    <fullName>Condition_3__c</fullName>
    <label>Condition 3</label>
    <type>TextArea</type>
</CustomField>