force-app/main/default/objects/Time_Line_Conditions__c/fields/Condition_match__c.field-meta.xml
<CustomField>
    <fullName>Condition_match__c</fullName>
    <label>Condition match</label>
    <length>30</length>
    <type>Text</type>
</CustomField>