force-app/main/default/objects/Time_Line_Conditions__c/fields/Customer_To_Do_s__c.field-meta.xml
<CustomField>
    <fullName>Customer_To_Do_s__c</fullName>
    <label>Customer To Do&apos;s</label>
    <type>TextArea</type>
</CustomField>