force-app/main/default/objects/Time_Line_Conditions__c/fields/Done_Title__c.field-meta.xml
<CustomField>
    <fullName>Done_Title__c</fullName>
    <label>Done Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>