force-app/main/default/objects/Time_Line_Conditions__c/fields/is_Major__c.field-meta.xml
<CustomField>
    <fullName>is_Major__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Major</label>
    <type>Checkbox</type>
</CustomField>