force-app/main/default/objects/Time_Line_Conditions__c/fields/number_of_condition__c.field-meta.xml
<CustomField>
    <fullName>number_of_condition__c</fullName>
    <formula>IF(ISBLANK( Condition_1__c ),0,1) 
+ IF(ISBLANK( Condition_2__c ),0,1)
+ IF(ISBLANK( Condition_3__c ),0,1)
+ IF(ISBLANK( Condition_4__c ),0,1)
+ IF(ISBLANK( Condition_5__c ),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of condition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>