force-app/main/default/objects/Time_Line_Conditions__c/fields/Operator_1__c.field-meta.xml
<CustomField>
    <fullName>Operator_1__c</fullName>
    <label>Operator 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>