force-app/main/default/objects/Time_Line_Conditions__c/fields/Operator_2__c.field-meta.xml
<CustomField>
    <fullName>Operator_2__c</fullName>
    <label>Operator 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>