force-app/main/default/objects/Time_Line_Conditions__c/fields/Operator_3__c.field-meta.xml
<CustomField>
    <fullName>Operator_3__c</fullName>
    <label>Operator 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>