force-app/main/default/objects/Time_Line_Conditions__c/fields/Todo_s_For__c.field-meta.xml
<CustomField>
    <fullName>Todo_s_For__c</fullName>
    <label>Todo&apos;s For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>ParkerLane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>