force-app/main/default/objects/Time_Line_Conditions__c/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <label>Value 1</label>
    <type>TextArea</type>
</CustomField>