force-app/main/default/objects/Time_Line_Conditions__c/fields/Value_3__c.field-meta.xml
<CustomField>
    <fullName>Value_3__c</fullName>
    <label>Value 3</label>
    <type>TextArea</type>
</CustomField>